# youtube-forensics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-build.yml
config/: settings.yaml
packaging/: README.md  yt_forensics.spec  zip_release.py
packaging/release_templates/: README-macos.txt  README-windows.txt
scripts/: bootstrap_browser_profile.py  build_release.ps1  build_release.sh  debug_browser_eval.py  debug_browser_login.py  debug_browser_revenue.py  debug_chrome_profile.py  probe_accounts_ypp.py  probe_batch_fixed.py  probe_batch_revenue.py  probe_cookies.py  probe_creator_endpoints.py  probe_embedded_ctx.py  probe_full_ctx.py  probe_get_masks.py  probe_html_tokens.py  probe_js_bundles.py  probe_js_strings.py  probe_list_filters.py  probe_list_metrics.py  probe_list_structure.py  probe_metrics_sample.py  probe_monetization.py  probe_revenue_api.py  probe_studio_analytics.py  probe_studio_err.py  probe_studio_variants.py  probe_yta_web.py
specs/: EXPORT_FORMAT.md
specs/examples/: hashes.sha256.example  meta.example.json
src/yt_forensics/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  runtime_paths.py
src/yt_forensics/analytics/: __init__.py  browser_cookies.py  browser_harvest.py  browser_scripts.py  harvest.py  parse.py  resilience.py  studio_client.py
tests/: test_analytics_resilience.py  test_cookie_acquire.py  test_dashboard.py  test_export_schema.py  test_m2_channels.py  test_m2_cookie_load.py  test_m3_videos.py  test_m4_analytics.py  test_preflight_dashboard.py  test_runtime_paths.py
(+27 files in other folders)
