[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-forensics"
version = "0.1.0"
description = "YouTube account network online extraction tool for forensic use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "browser-cookie3>=0.19.1",
  "cryptography>=42.0.0",
  "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
browser = ["playwright>=1.40.0"]
pack = ["pyinstaller>=6.3.0"]

[project.scripts]
yt-forensics = "yt_forensics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
